--- a/lesson_1/numpy_homework.ipynb
+++ b/lesson_1/numpy_homework.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3ecee43e",
    "metadata": {},
    "outputs": [],
@@ -21,69 +21,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "02388b6b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[97.30532747]\n",
+      "  [97.60471322]\n",
+      "  [97.12407283]]\n",
+      "\n",
+      " [[97.91972068]\n",
+      "  [98.67050677]\n",
+      "  [98.8539941 ]]\n",
+      "\n",
+      " [[98.45397797]\n",
+      "  [98.53699244]\n",
+      "  [97.53841013]]]\n",
+      "[[  4 -10  -9   8  10]\n",
+      " [ -5  -3  -9  -3   0]\n",
+      " [  8   8  -3   3  -6]\n",
+      " [ -4  -8   0  -3   5]\n",
+      " [-10  -2   9  -8   6]] \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# 0. зафиксируйте свой любимый seed \n"
+    "# 0. зафиксируйте свой любимый seed \n",
+    "np.random.seed(777)\n",
+    "\n",
+    "# 1. Создайте трехмерный массив со случайными числами от 97 до 99\n",
+    "a = np.random.uniform(97, 99, 9)\n",
+    "print(a.reshape(3, 3, -1))\n",
+    "\n",
+    "# 2. Создайте квдартраный массив размером 5x5 с целыми числами от -10 до 10 (зафиксируйте этот массив А)\n",
+    "A = np.random.randint(-10, 11, 25).reshape(5, 5)\n",
+    "print(A, \"\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "acf9eae1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([-1.94029238+16.12340005j, -1.94029238-16.12340005j,\n",
+      "        3.91229601 +4.46546243j,  3.91229601 -4.46546243j,\n",
+      "       -2.94400726 +0.j        ]), array([[ 0.58632498+0.j        ,  0.58632498-0.j        ,\n",
+      "        -0.1065088 -0.50610861j, -0.1065088 +0.50610861j,\n",
+      "        -0.52961394+0.j        ],\n",
+      "       [ 0.18769671+0.20138561j,  0.18769671-0.20138561j,\n",
+      "         0.50091333+0.2355707j ,  0.50091333-0.2355707j ,\n",
+      "         0.34110059+0.j        ],\n",
+      "       [ 0.00168553-0.45947557j,  0.00168553+0.45947557j,\n",
+      "        -0.19143589-0.16616424j, -0.19143589+0.16616424j,\n",
+      "         0.03722025+0.j        ],\n",
+      "       [ 0.03377411+0.29852036j,  0.03377411-0.29852036j,\n",
+      "        -0.05168735+0.0536257j , -0.05168735-0.0536257j ,\n",
+      "         0.76466277+0.j        ],\n",
+      "       [-0.18609978+0.49439653j, -0.18609978-0.49439653j,\n",
+      "         0.59690592+0.j        ,  0.59690592-0.j        ,\n",
+      "         0.13063291+0.j        ]]))\n"
+     ]
+    }
+   ],
    "source": [
-    "# 1. Создайте трехмерный массив со случайными числами от 97 до 99\n"
+    "# 3. Найдите собственные векторы предыдущего массива (А)\n",
+    "print(np.linalg.eig(A))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "967696e1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2. Создайте квдартраный массив размером 5x5 с целыми числами от -10 до 10 (зафиксируйте этот массив А)\n"
+    "# 4. Замените первые 5 чисел A на максимумы по столбцам и сохраните в массив B\n",
+    "B = np.copy(A)\n",
+    "B[0] = B.max(axis=0)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8b2fb5b0",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 3. Найдите собственные векторы предыдущего массива (А)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d94f2ed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 4. Замените первые 5 чисел A на максимумы по столбцам и сохраните в массив B\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7bce9c77",
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[   4  -10   -9    8   10    8    8    9    8   10]\n",
+      " [   8   -5    8   -4  -10   32   50  -72  -32 -100]\n",
+      " [  -5   -3   -9   -3    0   -5   -3   -9   -3    0]\n",
+      " [   8   -3    8   -8   -2  -40    9  -72   24    0]\n",
+      " [   8    8   -3    3   -6    8    8   -3    3   -6]\n",
+      " [   9   -9   -3    0    9   72  -72    9    0  -54]\n",
+      " [  -4   -8    0   -3    5   -4   -8    0   -3    5]\n",
+      " [   8   -3    3   -3   -8  -32   24    0    9  -40]\n",
+      " [ -10   -2    9   -8    6  -10   -2    9   -8    6]\n",
+      " [  10    0   -6    5    6 -100    0  -54  -40   36]]\n"
+     ]
+    }
+   ],
    "source": [
     "# 5. Конкатенируйте 4 массива в массив вида:\n",
     "\n",
     "# A B\n",
     "# C D\n",
-    "# где \n",
+    "# где\n",
     "#     C - транспонированный B\n",
     "#     D - поэлементно умноженный A на С\n",
-    "# Размер массива должен быть 10x10"
+    "# Размер массива должен быть 10x10\n",
+    "\n",
+    "C = B.T\n",
+    "D = A * C\n",
+    "\n",
+    "print(np.hstack([A,B,C,D]).reshape(10,10))"
    ]
   },
   {
