--- a/lesson_1/numpy_homework.ipynb
+++ b/lesson_1/numpy_homework.ipynb
@@ -120,14 +120,14 @@
      "output_type": "stream",
      "text": [
       "[[   4  -10   -9    8   10    8    8    9    8   10]\n",
-      " [   8   -5    8   -4  -10   32   50  -72  -32 -100]\n",
       " [  -5   -3   -9   -3    0   -5   -3   -9   -3    0]\n",
-      " [   8   -3    8   -8   -2  -40    9  -72   24    0]\n",
       " [   8    8   -3    3   -6    8    8   -3    3   -6]\n",
-      " [   9   -9   -3    0    9   72  -72    9    0  -54]\n",
       " [  -4   -8    0   -3    5   -4   -8    0   -3    5]\n",
-      " [   8   -3    3   -3   -8  -32   24    0    9  -40]\n",
       " [ -10   -2    9   -8    6  -10   -2    9   -8    6]\n",
+      " [   8   -5    8   -4  -10   32   50  -72  -32 -100]\n",
+      " [   8   -3    8   -8   -2  -40    9  -72   24    0]\n",
+      " [   9   -9   -3    0    9   72  -72    9    0  -54]\n",
+      " [   8   -3    3   -3   -8  -32   24    0    9  -40]\n",
       " [  10    0   -6    5    6 -100    0  -54  -40   36]]\n"
      ]
     }
@@ -144,8 +144,7 @@
     "\n",
     "C = B.T\n",
     "D = A * C\n",
-    "\n",
-    "print(np.hstack([A,B,C,D]).reshape(10,10))"
+    "print(np.vstack([np.hstack([A, B]), np.hstack([C,D])]))"
    ]
   },
   {
